Updated sidebar to have dynamic height to avoid clipping

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -152,14 +152,7 @@ h6 {
     }
 }
 
-@media (min-width: 768px) {
-    .sidebar-sticky {
-        margin-top: 51px; /* Height of navbar */
-    }
-}
-
 .sidebar-sticky {
-    padding-top: .5rem;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
